adding redirection on direct link to gif, readme

--- a/views/index.erb
+++ b/views/index.erb
@@ -8,5 +8,12 @@
       Img2Png is a simple web application designed to quickly convert images served
       from any web server into the PNG format.
     </div>
+    <h2>Usage</h2>
+    <div>
+      Apply the url of the source image as a string at the end of the current url. The HTTP scheme should be changed to another "/" delineated attribute.
+      <div class='example'>
+        http://png.heroku.com/http/www.google.com/intl/en_ALL/images/logo.gif/i.png
+      </div>
+    </div>
   </body>
 </html>
