--- a/views/index.erb
+++ b/views/index.erb
@@ -1,22 +1,27 @@
 <html>
-  <head>
-    <title>Img2Png</title>
-  </head>
-  <body>
+<head>
+  <title>Img2Png</title>
+</head>
+<body>
+  <div>
     <h2>About Img2Png</h2>
     <div>
       Img2Png is a simple web application designed to quickly convert images served
       from any web server into the PNG format.
     </div>
     <div>
-      This works with GIF and JPEG files, though at the moment only GIFs are thoroughly tested. In theory any format supported by ImageMagick should work, though there has been no examination of file size or bandwidth limitations when running live.
+      This works with GIF and JPEG files, though at the moment only GIFs are thoroughly 
+      tested. In theory any format supported by ImageMagick should work, though there 
+      has been no examination of file size or bandwidth limitations when running live.
     </div>
     <h2>Usage</h2>
     <div>
-      Apply the url of the source image as a string at the end of the current url. The HTTP scheme should be changed to another "/" delineated attribute.
-      <div class='example'>
+      Apply the url of the source image as a string at the end of the current url. 
+      The HTTP scheme should be changed to another "/" delineated attribute.
+      <div class='callout'>
         http://png.heroku.com/http/www.google.com/intl/en_ALL/images/logo.gif/i.png
       </div>
     </div>
-  </body>
+  </div>
+</body>
 </html>
