adding style reference

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,7 @@
 <html>
 <head>
   <title>Img2Png</title>
+  <link rel="stylesheet" type="text/css" href="/css/styles.css" media="screen" />
 </head>
 <body>
   <div>
